--- a/app/globals.css
+++ b/app/globals.css
@@ -5,4 +5,9 @@
 :root {
   background-color: black;
   color: white;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  box-sizing: border-box;
 }
