Add primary color for background and text

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,4 +10,9 @@
   padding: 0;
   overflow: hidden;
   box-sizing: border-box;
+  /* --primary-color: #121212; */
 }
+
+/* .bg-primary {
+  background-color: var(--primary-color);
+} */
