--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,23 @@
   overflow: hidden;
   box-sizing: border-box;
 }
+
+.scroll-bar::-webkit-scrollbar-track {
+  opacity: 0;
+}
+
+.scroll-bar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  border: 1px solid #000;
+}
+
+.scroll-bar:hover::-webkit-scrollbar-thumb {
+  background-color: #737272;
+  transition-delay: 0.5s;
+}
